# edu-franka_simulator_ros2

./: README.md
arm_controllers/: CMakeLists.txt  package.xml
elfin/elfin_description/: CMakeLists.txt
elfin/elfin_gazebo/: CMakeLists.txt  package.xml
elfin/elfin_gazebo/launch/: elfin3_empty_world.launch.py  fp3_empty_world.launch.py
elfin_description/: package.xml
elfin_description/urdf/: elfin3.urdf.xacro
elfin_gazebo/launch/: elfin.launch.py  elfin3_empty_world.launch.py  fp3_empty_world.launch.py  gazebo.launch.py
franka_description/: CMakeLists.txt  package.xml
franka_description/urdf/: fp3_franka_hand.urdf
