<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_controllers</name>
  <version>0.1.0</version>
  <description>Robot Arm Controllers</description>
  <maintainer email="support@franka.de">Franka Robotics GmbH</maintainer>
  <license>Apache 2.0</license>

  <depend>urdf</depend>
  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>kdl_parser</depend>
  <!--<depend>realtime_tools</depend>-->
  <!--<depend>angles</depend>-->
  <!--<depend>dynamic_reconfigure</depend>-->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
